update HTML structure

--- a/pages/med.html
+++ b/pages/med.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="medicare+ best medical plateform">
 <title>Médecins - MediCare+</title>
+<!--
+  File: pages/med.html
+  Purpose: Médecins listing page. Renders doctor filters, list and favorites.
+  Note: Only comments were added to document structure; no logic changed.
+-->
 <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
