--- a/pages/acceuil.html
+++ b/pages/acceuil.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="medicare+ best medical plateform">
 <title>Medicare+</title>
+<!--
+  File: pages/acceuil.html
+  Purpose: 'Accueil' page — mirrors the main index layout for inner navigation.
+  Note: Only documentation comments added, no functional changes.
+-->
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="transition-colors duration-500">
