--- a/dashboord/pages/dashboard.html
+++ b/dashboord/pages/dashboard.html
@@ -110,6 +110,10 @@
                     <i class="fas fa-heart text-lg"></i>
                     <span>Spécialités</span>
                 </a>
+
+    </a>
+  </div>
+
                 
             </nav>
             
