--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="text-2xl font-bold bg-gradient-to-r from-blue-600 to-blue-400 bg-clip-text text-transparent">MédiCare+</div>
     <div class="hidden md:flex space-x-8">
         <a href="/pages/acceuil.html" class="text-blue-600 font-semibold">Accueil</a>
-      <a href="/pages/med.html" class="text-gray-600 hover:text-blue-600 transition-colors">Médecins</a>
+      <a href="./pages/med.html" class="text-gray-600 hover:text-blue-600 transition-colors">Médecins</a>
     
       <a href="/pages/rendez-vous.html" class="text-gray-600 hover:text-blue-600 transition-colors">Rendez-vous</a>
       <a href="/pages/suivi.html" class="text-gray-600 hover:text-blue-600 transition-colors">Suivi Santé</a>
