--- a/dashboord/pages/medecin.html
+++ b/dashboord/pages/medecin.html
@@ -83,16 +83,16 @@
     </header>
 
     <div class="flex pt-16">
-      <aside id="sidebar" class="w-64 bg-white h-screen shadow-lg fixed left-0 lg:block hidden overflow-y-auto">
+     <aside id="sidebar" class="w-64 bg-white h-screen shadow-lg fixed left-0 lg:block hidden overflow-y-auto">
             <nav class="p-4 space-y-2">
-                <a href="dashboard.html" class="sidebar-item active flex items-center space-x-3 px-4 py-3 rounded-lg">
+                 <a href="dashboard.html" class="sidebar-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-600">
                     <i class="fas fa-home text-lg"></i>
-                    <span class="font-medium">Accueil</span>
+                    <span>Acceuil</span>
                 </a>
                 
-                <a href="medecin.html" class="sidebar-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-600">
+                <a href="medecin.html" class="sidebar-item active flex items-center space-x-3 px-4 py-3 rounded-lg">
                     <i class="fas fa-user-md text-lg"></i>
-                    <span>Médecins</span>
+                    <span class="font-medium">Médecins</span>
                 </a>
                 
                 <a href="rendez_vous.html" class="sidebar-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-600">
@@ -109,6 +109,12 @@
                     <i class="fas fa-heart text-lg"></i>
                     <span>Spécialités</span>
                 </a>
+                <div class="p-4 border-t">
+    <a href="authentification.html" class="flex items-center space-x-3 px-4 py-3 rounded-lg text-red-600 hover:bg-red-50 transition">
+      <i class="fas fa-sign-out-alt text-lg"></i>
+      <span>Déconnexion</span>
+    </a>
+  </div>
 
     </a>
   </div>
