--- a/dashboord/pages/rendez_vous.html
+++ b/dashboord/pages/rendez_vous.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>MédiCare+ - Dashboard Admin</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -81,7 +84,7 @@
 
                 <!-- profile -->
                 <div class="flex items-center space-x-3">
-                    <img src="data:image/svg+xml,svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='50' fill='%23e0e7ff'/><text x='50' y='65' font-size='40' text-anchor='middle' fill='%233b82f6' font-family='Arial'>AD</text></svg>"
+                    <img src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20100%20100'%3E%3Ccircle%20cx='50'%20cy='50'%20r='50'%20fill='%23e0e7ff'/%3E%3Ctext%20x='50'%20y='65'%20font-size='40'%20text-anchor='middle'%20fill='%233b82f6'%20font-family='Arial'%3EAD%3C/text%3E%3C/svg%3E"
                         alt="Avatar" class="w-10 h-10 rounded-full">
                     <div class="hidden md:block">
                         <div class="font-semibold">Administrateur</div>
@@ -95,9 +98,10 @@
     <!-- main content -->
 
     <div class="flex pt-16">
-<aside id="sidebar" class="w-64 bg-white h-screen shadow-lg fixed left-0 lg:block hidden overflow-y-auto">
+        <aside id="sidebar" class="w-64 bg-white h-screen shadow-lg fixed left-0 lg:block hidden overflow-y-auto">
             <nav class="p-4 space-y-2">
-                <a href="dashboard.html" class="sidebar-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-600">
+                <a href="dashboard.html"
+                    class="sidebar-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-600">
                     <i class="fas fa-home text-lg"></i>
                     <span>Accueil</span>
                 </a>
@@ -108,8 +112,7 @@
                     <span>Médecins</span>
                 </a>
 
-                <a href="rendez_vous.html"
-                    class="sidebar-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-600">
+                <a href="rendez_vous.html" class="sidebar-item active flex items-center space-x-3 px-4 py-3 rounded-lg">
                     <i class="fas fa-calendar-check text-lg"></i>
                     <span class="font-medium">Rendez-vous</span>
                 </a>
@@ -126,11 +129,12 @@
                     <span>Spécialités</span>
                 </a>
                 <div class="p-4 border-t">
-    <a href="authentification.html" class="flex items-center space-x-3 px-4 py-3 rounded-lg text-red-600 hover:bg-red-50 transition">
-      <i class="fas fa-sign-out-alt text-lg"></i>
-      <span>Déconnexion</span>
-    </a>
-  </div>
+                    <a href="authentification.html"
+                        class="flex items-center space-x-3 px-4 py-3 rounded-lg text-red-600 hover:bg-red-50 transition">
+                        <i class="fas fa-sign-out-alt text-lg"></i>
+                        <span>Déconnexion</span>
+                    </a>
+                </div>
 
                 </a>
             </nav>
@@ -142,16 +146,6 @@
             <div class="bg-white p-6 rounded-lg shadow-lg">
                 <div class="mb-4 flex items-center justify-between">
                     <h3 class="text-lg font-semibold">gestion des rendez_vous</h3>
-                    <div class="flex items-center">
-                        <label for="statusFilter" class="sr-only">Filtrer par statut</label>
-                        <select id="statusFilter"
-                            class="border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                            <option value="all">Tous les statuts</option>
-                            <option value="confirmed">Confirmés</option>
-                            <option value="pending">En attente</option>
-                            <option value="canceled">Annulés</option>
-                        </select>
-                    </div>
                 </div>
                 <div class="overflow-x-auto">
                     <table class="min-w-full table-auto border-collapse border border-gray-200">
@@ -167,7 +161,7 @@
                             </tr>
                         </thead>
                         <tbody id="appointmentsTableBody">
-                            <!-- Les rendez-vous seront insérés ici dynamiquement -->
+                            <!-- Les rendez-vous here -->
                         </tbody>
 
                     </table>
