--- a/dashboord/pages/authentification.html
+++ b/dashboord/pages/authentification.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
 
   <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm">
     <h2 class="text-2xl font-semibold text-center text-gray-800 mb-6">Connexion</h2>
 
-    <form id= "loginForm" action="dashboard.html" class="space-y-5">
+    <form id="loginForm" action="dashboard.html" class="space-y-5">
       <div>
         <label class="block text-gray-700 mb-2 text-sm font-medium">Nom d'utilisateur</label>
-        <input id="username"
-          type="text" 
-          placeholder="Entrez votre nom" 
-          required 
-          class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-        >
+        <input id="username" type="text" placeholder="Entrez votre nom" required
+          class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
       </div>
 
       <div>
         <label class="block text-gray-700 mb-2 text-sm font-medium">Mot de passe</label>
-        <input id="password"
-          type="password" 
-          placeholder="Entrez votre mot de passe" 
-          required 
-          class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-        >
+        <input id="password" type="password" placeholder="Entrez votre mot de passe" required
+          class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
       </div>
       <div id="errorMsg" class="text-sm text-red-600 hidden">Identifiants incorrects.</div>
-      <button 
-        type="submit" 
-        class="w-full bg-blue-600 text-white py-2 rounded-md font-medium hover:bg-blue-700 transition-colors duration-300"
-      >
+      <button type="submit"
+        class="w-full bg-blue-600 text-white py-2 rounded-md font-medium hover:bg-blue-700 transition-colors duration-300">
         Se connecter
       </button>
-      
+
     </form>
   </div>
- <script>
+  <script>
     const VALID_CREDENTIALS = {
       username: 'secretaire',
       password: 'admin123'
@@ -51,24 +43,25 @@
     const form = document.getElementById('loginForm');
     const errorMsg = document.getElementById('errorMsg');
 
-   form.addEventListener('submit', function (e) {
-  e.preventDefault();
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
 
-  const username = document.getElementById('username').value.trim();
-  const password = document.getElementById('password').value;
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value;
 
-  if (username === VALID_CREDENTIALS.username && password === VALID_CREDENTIALS.password) {
-    localStorage.setItem('isLoggedIn', 'true');
-    window.location.href = DASHBOARD_URL;
-  } else {
-    errorMsg.textContent = "Identifiants incorrects.";
-    errorMsg.classList.remove('hidden');
+      if (username === VALID_CREDENTIALS.username && password === VALID_CREDENTIALS.password) {
+        localStorage.setItem('isLoggedIn', 'true');
+        window.location.href = DASHBOARD_URL;
+      } else {
+        errorMsg.textContent = "Identifiants incorrects.";
+        errorMsg.classList.remove('hidden');
 
-   
-  }
-});
 
-    
+      }
+    });
+
+
   </script>
 </body>
+
 </html>
