--- a/dashboord/pages/rendez_vous.html
+++ b/dashboord/pages/rendez_vous.html
@@ -129,7 +129,7 @@
                     <span>Spécialités</span>
                 </a>
                 <div class="p-4 border-t">
-                    <a href="authentification.html"
+                    <a href="authentification.html" id="logout"
                         class="flex items-center space-x-3 px-4 py-3 rounded-lg text-red-600 hover:bg-red-50 transition">
                         <i class="fas fa-sign-out-alt text-lg"></i>
                         <span>Déconnexion</span>
