--- a/dashboord/pages/medecin.html
+++ b/dashboord/pages/medecin.html
@@ -230,7 +230,12 @@ button:hover {
                 <a href="specialite.html" class="sidebar-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-600">
                     <i class="fas fa-heart text-lg"></i>
                     <span>Spécialités</span>
-                </a>
+                </a>*          </a>
+                <div class="p-4 border-t">
+    <a id="logout" href="authentification.html" class="flex items-center space-x-3 px-4 py-3 rounded-lg text-red-600 hover:bg-red-50 transition">
+      <i class="fas fa-sign-out-alt text-lg"></i>
+      <span>Déconnexion</span>
+    </a>
             </nav>
         </aside>
     </div>
