--- a/dashboord/pages/disponibilite.html
+++ b/dashboord/pages/disponibilite.html
@@ -93,7 +93,7 @@
                     <span>Spécialités</span>
                 </a>
                 <div class="p-4 border-t">
-    <a href="authentification.html" class="flex items-center space-x-3 px-4 py-3 rounded-lg text-red-600 hover:bg-red-50 transition">
+     <a id="logout" href="authentification.html" class="flex items-center space-x-3 px-4 py-3 rounded-lg text-red-600 hover:bg-red-50 transition">
       <i class="fas fa-sign-out-alt text-lg"></i>
       <span>Déconnexion</span>
     </a>
@@ -162,14 +162,6 @@
     </main>
   </div>
 
-  <script>
-    function afficherFormulaire() {
-      const select = document.getElementById('selectMedecinDispo');
-      const formulaire = document.getElementById('formulaireDispo');
-      formulaire.style.display = select.value ? 'block' : 'none';
-    }
-
-    
-  </script>
+  <script src="../script/disponibilite.js"></script>
 </body>
 </html>
