--- a/pages/med.html
+++ b/pages/med.html
@@ -182,13 +182,11 @@
   </div>
 
   <div id="filterSection" class="rounded-2xl p-6 shadow-lg bg-white/80 backdrop-blur-sm transition-colors duration-500">
-    <div class="flex flex-wrap gap-4 items-center justify-center">
-      <span class="text-blue-900 font-semibold text-lg">Filtrer par spécialité :</span>
-      <button data-specialty="all" class="filter-btn px-6 py-3 rounded-full bg-gradient-to-r from-blue-600 to-blue-500 text-white shadow-lg font-medium">Tous</button>
-      <button data-specialty="cardiologie" class="filter-btn px-6 py-3 rounded-full bg-blue-50 text-blue-700 hover:bg-blue-100 shadow-md font-medium">❤️ Cardiologie</button>
-      <button data-specialty="dermatologie" class="filter-btn px-6 py-3 rounded-full bg-blue-50 text-blue-700 hover:bg-blue-100 shadow-md font-medium">✨ Dermatologie</button>
-      <button data-specialty="pédiatrie" class="filter-btn px-6 py-3 rounded-full bg-blue-50 text-blue-700 hover:bg-blue-100 shadow-md font-medium">👶 Pédiatrie</button>
-      <button data-specialty="orthopédie" class="filter-btn px-6 py-3 rounded-full bg-blue-50 text-blue-700 hover:bg-blue-100 shadow-md font-medium">🦴 Orthopédie</button>
+    <div class="flex flex-wrap gap-4 items-center justify-center" id="specialiteList">
+      <span class="text-blue-900 font-semibold text-lg">Nos spécialités :</span>
+
+      <!-- <button data-specialty="cardiologie" class="filter-btn px-6 py-3 rounded-full bg-blue-50 text-blue-700 hover:bg-blue-100 shadow-md font-medium"> Cardiologie</button> -->
+   
     </div>
   </div>
 
