working on disponibilite page js

--- a/dashboord/pages/disponibilite.html
+++ b/dashboord/pages/disponibilite.html
@@ -162,14 +162,12 @@
     </main>
   </div>
 
-  <script>
-    function afficherFormulaire() {
-      const select = document.getElementById('selectMedecinDispo');
-      const formulaire = document.getElementById('formulaireDispo');
-      formulaire.style.display = select.value ? 'block' : 'none';
-    }
+  
+  <script src="/dashboord/script/disponibilite.js"></script>
+
+
 
     
-  </script>
-</body>
+ 
+</body> 
 </html>
