--- a/dashboord/pages/specialite.html
+++ b/dashboord/pages/specialite.html
@@ -117,10 +117,10 @@
                     <span>Disponibilités</span>
                 </a>
 
-                <a href="specialite.html" id =
-                    class="sidebar-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-600">
+                <a href="specialite.html" 
+                   class="sidebar-item active flex items-center space-x-3 px-4 py-3 rounded-lg">
                     <i class="fas fa-heart text-lg"></i>
-                    <span>Spécialités</span>
+                    <span class="font-medium">specialite</span>
                 </a>
                 <div class="p-4 border-t">
     <a id="logout" href="authentification.html" class="flex items-center space-x-3 px-4 py-3 rounded-lg text-red-600 hover:bg-red-50 transition">
