des grands changements

--- a/dashboord/pages/disponibilite.html
+++ b/dashboord/pages/disponibilite.html
@@ -125,23 +125,23 @@
 
           <div class="grid grid-cols-2 md:grid-cols-3 gap-3 mb-6">
             <label class="flex items-center p-3 bg-gray-50 rounded-lg cursor-pointer hover:bg-gray-100">
-              <input type="checkbox" value="Lundi" checked class="mr-2 accent-blue-500">
+              <input type="checkbox" value="Lundi" checked class="mr-2 accent-blue-500 disponibilite">
               <span>Lundi</span>
             </label>
             <label class="flex items-center p-3 bg-gray-50 rounded-lg cursor-pointer hover:bg-gray-100">
-              <input type="checkbox" value="Mardi" checked class="mr-2 accent-blue-500">
+              <input type="checkbox" value="Mardi" checked class="mr-2 accent-blue-500 disponibilite">
               <span>Mardi</span>
             </label>
             <label class="flex items-center p-3 bg-gray-50 rounded-lg cursor-pointer hover:bg-gray-100">
-              <input type="checkbox" value="Mercredi" checked class="mr-2 accent-blue-500">
+              <input type="checkbox" value="Mercredi" checked class="mr-2 accent-blue-500 disponibilite">
               <span>Mercredi</span>
             </label>
             <label class="flex items-center p-3 bg-gray-50 rounded-lg cursor-pointer hover:bg-gray-100">
-              <input type="checkbox" value="Jeudi" checked class="mr-2 accent-blue-500">
+              <input type="checkbox" value="Jeudi" checked class="mr-2 accent-blue-500 disponibilite">
               <span>Jeudi</span>
             </label>
             <label class="flex items-center p-3 bg-gray-50 rounded-lg cursor-pointer hover:bg-gray-100">
-              <input type="checkbox" value="Vendredi" checked class="mr-2 accent-blue-500">
+              <input type="checkbox" value="Vendredi" checked class="mr-2 accent-blue-500 disponibilite">
               <span>Vendredi</span>
             </label>
            
