--- a/pages/rendez-vous.html
+++ b/pages/rendez-vous.html
@@ -87,7 +87,7 @@
           <!-- phone field -->
           <div>
             <label class="block text-blue-900 font-semibold mb-2">Téléphone</label>
-            <input type="tel" id="phone"
+            <input  type="tel" id="phone"
               class="form-input w-full p-4 rounded-xl border-2 border-blue-100 focus:border-blue-500 focus:outline-none transition-all"
               placeholder="Ex: 0612345678">
           </div>
@@ -97,7 +97,7 @@
             <label class="block text-blue-900 font-semibold mb-2">Jour *</label>
             <div id="dayField" class="flex flex-wrap gap-3">
               <label class="inline-flex items-center cursor-pointer">
-                <input type="radio" name="day" value="lundi" class="sr-only peer" required>
+                <input  type="radio" name="day" value="lundi" class="sr-only peer" required>
                 <span
                   class="px-4 py-2 rounded-xl border-2 border-blue-100 bg-white text-blue-700 font-medium transition-all peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-blue-600">
                   Lundi
@@ -105,7 +105,7 @@
               </label>
 
               <label class="inline-flex items-center cursor-pointer">
-                <input type="radio" name="day" value="mardi" class="sr-only peer">
+                <input  type="radio" name="day" value="mardi" class="sr-only peer">
                 <span
                   class="px-4 py-2 rounded-xl border-2 border-blue-100 bg-white text-blue-700 font-medium transition-all peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-blue-600">
                   Mardi
@@ -113,7 +113,7 @@
               </label>
 
               <label class="inline-flex items-center cursor-pointer">
-                <input type="radio" name="day" value="mercredi" class="sr-only peer">
+                <input  type="radio" name="day" value="mercredi" class="sr-only peer">
                 <span
                   class="px-4 py-2 rounded-xl border-2 border-blue-100 bg-white text-blue-700 font-medium transition-all peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-blue-600">
                   Mercredi
@@ -121,7 +121,7 @@
               </label>
 
               <label class="inline-flex items-center cursor-pointer">
-                <input type="radio" name="day" value="jeudi" class="sr-only peer">
+                <input  type="radio" name="day" value="jeudi" class="sr-only peer">
                 <span
                   class="px-4 py-2 rounded-xl border-2 border-blue-100 bg-white text-blue-700 font-medium transition-all peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-blue-600">
                   Jeudi
@@ -129,7 +129,7 @@
               </label>
 
               <label class="inline-flex items-center cursor-pointer">
-                <input type="radio" name="day" value="vendredi" class="sr-only peer">
+                <input  type="radio" name="day" value="vendredi" class="sr-only peer">
                 <span 
                   class="px-4 py-2 rounded-xl border-2 border-blue-100 bg-white text-blue-700 font-medium transition-all peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-blue-600">
                   Vendredi
@@ -185,7 +185,7 @@
     <p class="text-blue-800">© 2025 MediCare+. Tous droits réservés.</p>
   </footer>
 
-  <script src="../asstets/js/rendez-vous.js"></script>
+  <script src="/asstets/js/rendez-vous.js"></script>
 
 </body>
 
