Update script source path for disponibilite.js

--- a/dashboord/pages/disponibilite.html
+++ b/dashboord/pages/disponibilite.html
@@ -159,7 +159,7 @@
   </div>
 
   
-  <script src="/dashboord/script/disponibilite.js"></script>
+  <script src="../script/disponibilite.js"></script>
 
 
 
