Fix script source path in rendez-vous.html

--- a/pages/rendez-vous.html
+++ b/pages/rendez-vous.html
@@ -185,7 +185,7 @@
     <p class="text-blue-800">© 2025 MediCare+. Tous droits réservés.</p>
   </footer>
 
-  <script src="/asstets/js/rendez-vous.js"></script>
+  <script src="../asstets/js/rendez-vous.js"></script>
 
 </body>
 
